# Search_Engine

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
test/: CMakeLists.txt  main_test.cpp  test.cpp
